# xmen_api

./: .gitignore  pyproject.toml
fastapi_doc_tutorial/: main.py
fastapi_xmen/: __init__.py  main.py
fastapi_xmen/models/: post.py
fastapi_xmen/routers/: post.py
