[tool.poetry]
name = "fastapi-xmen"
version = "0.1.0"
description = ""
authors = ["Joel <carter3689@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"





[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

